# pycronometer

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: build-validator.md  test-runner.md
.claude/commands/: implement.md  lint.md  plan.md  publish.md  test.md
.github/workflows/: ci.yml  publish.yml
scripts/: test_live.py
src/pycronometer/: __init__.py  auth.py  client.py  exceptions.py  exports.py  gwt.py  models.py  parsers.py
tests/: __init__.py  conftest.py  test_exceptions.py  test_gwt.py  test_parsers.py
tests/fixtures/: biometrics.csv  daily_nutrition.csv  exercises.csv  notes.csv  servings.csv
